cleanup and first blog post

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,5 +12,6 @@
    month = {},
    pages = {144-149(5)},
    publisher ={Institution of Engineering and Technology},
-   url = {https://digital-library.theiet.org/content/conferences/10.1049/icp.2021.1454}
+   url = {https://digital-library.theiet.org/content/conferences/10.1049/icp.2021.1454},
+   selected={true},
 }
